--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
+        "vue": "^2.7.7",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "autoprefixer": "10.4.5",
-        "vuetify": "^2.6.7"
+        "vue-media-upload": "^1.1.4",
+        "vue-router": "^3.5.4",
+        "vuetify": "^2.6.7",
+        "vuex": "^3.6.2"
     }
 }
