agreagar imagen a landing page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,24 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/images/aeroplane.svg": "/images/aeroplane.svg",
+    "/images/airplane.svg": "/images/airplane.svg",
+    "/images/bgDownload.jpg": "/images/bgDownload.jpg",
+    "/images/bgDrawer.jpg": "/images/bgDrawer.jpg",
+    "/images/bgHero.jpg": "/images/bgHero.jpg",
+    "/images/bgMain.png": "/images/bgMain.png",
+    "/images/bghero1.jpg": "/images/bghero1.jpg",
+    "/images/borderWaves.svg": "/images/borderWaves.svg",
+    "/images/borderWavesBlue.svg": "/images/borderWavesBlue.svg",
+    "/images/icon1.png": "/images/icon1.png",
+    "/images/icon1.svg": "/images/icon1.svg",
+    "/images/icon2.png": "/images/icon2.png",
+    "/images/icon2.svg": "/images/icon2.svg",
+    "/images/icon3.png": "/images/icon3.png",
+    "/images/icon3.svg": "/images/icon3.svg",
+    "/images/ill1.svg": "/images/ill1.svg",
+    "/images/ill2.svg": "/images/ill2.svg",
+    "/images/logo.png": "/images/logo.png",
+    "/images/paperplane.svg": "/images/paperplane.svg",
+    "/images/wave2.svg": "/images/wave2.svg"
 }
