--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "autoprefixer": "10.4.5",
+        "laravel-mix-alias": "^1.0.3",
         "vue-media-upload": "^1.1.4",
         "vue-router": "^3.5.4",
         "vuetify": "^2.6.7",
