--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,5 +20,6 @@
     "/images/ill2.svg": "/images/ill2.svg",
     "/images/logo.png": "/images/logo.png",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/img/logo.png": "/images/img/logo.png"
 }
