--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-<<<<<<< HEAD
     "/css/app.css": "/css/app.css",
     "/images/aeroplane.svg": "/images/aeroplane.svg",
     "/images/airplane.svg": "/images/airplane.svg",
@@ -19,12 +18,8 @@
     "/images/icon3.svg": "/images/icon3.svg",
     "/images/ill1.svg": "/images/ill1.svg",
     "/images/ill2.svg": "/images/ill2.svg",
+    "/images/img/logo.png": "/images/img/logo.png",
     "/images/logo.png": "/images/logo.png",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/wave2.svg": "/images/wave2.svg",
-    "/images/img/logo.png": "/images/img/logo.png",
-    "/images/admin/image/62df51e557e2d.jpeg": "/images/admin/image/62df51e557e2d.jpeg"
-=======
-    "/css/app.css": "/css/app.css"
->>>>>>> 99eb8ed305f878e36670b7820773aaa10a8ae16f
+    "/images/wave2.svg": "/images/wave2.svg"
 }
