--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,13 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/images/bgDownload.jpg": "/images/bgDownload.jpg",
+    "/images/bgHero.jpg": "/images/bgHero.jpg",
+    "/images/bgMain.png": "/images/bgMain.png",
+    "/images/borderWaves.svg": "/images/borderWaves.svg",
+    "/images/icon1.png": "/images/icon1.png",
+    "/images/icon2.png": "/images/icon2.png",
+    "/images/icon3.png": "/images/icon3.png",
+    "/images/logo.png": "/images/logo.png",
+    "/images/wave2.svg": "/images/wave2.svg"
 }
