vista de los productos para el publico

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,6 +20,11 @@
     "/images/ill2.svg": "/images/ill2.svg",
     "/images/img/logo.png": "/images/img/logo.png",
     "/images/logo.png": "/images/logo.png",
+    "/images/no-foto.png": "/images/no-foto.png",
     "/images/paperplane.svg": "/images/paperplane.svg",
+    "/images/products/729706062003970.jpg": "/images/products/729706062003970.jpg",
+    "/images/products/81wq00clus_-_1.jpg": "/images/products/81wq00clus_-_1.jpg",
+    "/images/products/asus_e210ma-tb_-_1.jpg": "/images/products/asus_e210ma-tb_-_1.jpg",
+    "/images/products/hp_victus_15-fa0031dx-_1_1.jpg": "/images/products/hp_victus_15-fa0031dx-_1_1.jpg",
     "/images/wave2.svg": "/images/wave2.svg"
 }
