crear productos, buscador de productos

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,8 +6,8 @@
     "/images/bgDownload.jpg": "/images/bgDownload.jpg",
     "/images/bgDrawer.jpg": "/images/bgDrawer.jpg",
     "/images/bgHero.jpg": "/images/bgHero.jpg",
-    "/images/bgMain.png": "/images/bgMain.png",
     "/images/bghero1.jpg": "/images/bghero1.jpg",
+    "/images/bgMain.png": "/images/bgMain.png",
     "/images/borderWaves.svg": "/images/borderWaves.svg",
     "/images/borderWavesBlue.svg": "/images/borderWavesBlue.svg",
     "/images/icon1.png": "/images/icon1.png",
@@ -26,5 +26,14 @@
     "/images/products/81wq00clus_-_1.jpg": "/images/products/81wq00clus_-_1.jpg",
     "/images/products/asus_e210ma-tb_-_1.jpg": "/images/products/asus_e210ma-tb_-_1.jpg",
     "/images/products/hp_victus_15-fa0031dx-_1_1.jpg": "/images/products/hp_victus_15-fa0031dx-_1_1.jpg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/products/62e0b24e08e0c_729706062003970.jpg": "/images/products/62e0b24e08e0c_729706062003970.jpg",
+    "/images/products/62e0b72257c19_asus_e210ma-tb_-_1.jpg": "/images/products/62e0b72257c19_asus_e210ma-tb_-_1.jpg",
+    "/images/products/62e0b724e1ab8_no-fotos.png": "/images/products/62e0b724e1ab8_no-fotos.png",
+    "/images/products/62e0b7e106c5a_no-fotos.png": "/images/products/62e0b7e106c5a_no-fotos.png",
+    "/images/products/62e0b7e37fa41_81wq00clus_-_1.jpg": "/images/products/62e0b7e37fa41_81wq00clus_-_1.jpg",
+    "/images/products/62e0bd04af1b8_729706062003970.jpg": "/images/products/62e0bd04af1b8_729706062003970.jpg",
+    "/images/products/62e0bd06ad0c2_5-31.jpg": "/images/products/62e0bd06ad0c2_5-31.jpg",
+    "/images/products/62e0be4f448f9_asus_e210ma-tb_-_1.jpg": "/images/products/62e0be4f448f9_asus_e210ma-tb_-_1.jpg",
+    "/images/products/62e0be5271621_no-fotos.png": "/images/products/62e0be5271621_no-fotos.png"
 }
