--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,8 +6,8 @@
     "/images/bgDownload.jpg": "/images/bgDownload.jpg",
     "/images/bgDrawer.jpg": "/images/bgDrawer.jpg",
     "/images/bgHero.jpg": "/images/bgHero.jpg",
-    "/images/bghero1.jpg": "/images/bghero1.jpg",
     "/images/bgMain.png": "/images/bgMain.png",
+    "/images/bghero1.jpg": "/images/bghero1.jpg",
     "/images/borderWaves.svg": "/images/borderWaves.svg",
     "/images/borderWavesBlue.svg": "/images/borderWavesBlue.svg",
     "/images/icon1.png": "/images/icon1.png",
@@ -22,24 +22,5 @@
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/products/729706062003970.jpg": "/images/products/729706062003970.jpg",
-    "/images/products/81wq00clus_-_1.jpg": "/images/products/81wq00clus_-_1.jpg",
-    "/images/products/asus_e210ma-tb_-_1.jpg": "/images/products/asus_e210ma-tb_-_1.jpg",
-    "/images/products/hp_victus_15-fa0031dx-_1_1.jpg": "/images/products/hp_victus_15-fa0031dx-_1_1.jpg",
-    "/images/wave2.svg": "/images/wave2.svg",
-    "/images/products/62e0b24e08e0c_729706062003970.jpg": "/images/products/62e0b24e08e0c_729706062003970.jpg",
-    "/images/products/62e0b72257c19_asus_e210ma-tb_-_1.jpg": "/images/products/62e0b72257c19_asus_e210ma-tb_-_1.jpg",
-    "/images/products/62e0b724e1ab8_no-fotos.png": "/images/products/62e0b724e1ab8_no-fotos.png",
-    "/images/products/62e0b7e106c5a_no-fotos.png": "/images/products/62e0b7e106c5a_no-fotos.png",
-    "/images/products/62e0b7e37fa41_81wq00clus_-_1.jpg": "/images/products/62e0b7e37fa41_81wq00clus_-_1.jpg",
-    "/images/products/62e0bd04af1b8_729706062003970.jpg": "/images/products/62e0bd04af1b8_729706062003970.jpg",
-    "/images/products/62e0bd06ad0c2_5-31.jpg": "/images/products/62e0bd06ad0c2_5-31.jpg",
-    "/images/products/62e0be4f448f9_asus_e210ma-tb_-_1.jpg": "/images/products/62e0be4f448f9_asus_e210ma-tb_-_1.jpg",
-    "/images/products/62e0be5271621_no-fotos.png": "/images/products/62e0be5271621_no-fotos.png",
-    "/images/admin/marca/62e0b3ee3cbed.jpeg": "/images/admin/marca/62e0b3ee3cbed.jpeg",
-    "/images/admin/marca/62e0bc432cac4_no-fotos.png": "/images/admin/marca/62e0bc432cac4_no-fotos.png",
-    "/images/admin/marca/62e0bc4530c24_asus_e210ma-tb_-_1.jpg": "/images/admin/marca/62e0bc4530c24_asus_e210ma-tb_-_1.jpg",
-    "/images/admin/marca/62e0bc707948a_26221288_108338189968664_4789405089082503702_o.jpg": "/images/admin/marca/62e0bc707948a_26221288_108338189968664_4789405089082503702_o.jpg",
-    "/images/admin/marca/62e0bc7e557d3_asus_e210ma-tb_-_1.jpg": "/images/admin/marca/62e0bc7e557d3_asus_e210ma-tb_-_1.jpg",
-    "/images/admin/marca/62e0bc80cd058_hp_victus_15-fa0031dx-_1_1.jpg": "/images/admin/marca/62e0bc80cd058_hp_victus_15-fa0031dx-_1_1.jpg"
+    "/images/wave2.svg": "/images/wave2.svg"
 }
