--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/images/admin/category/62e2ab0ed6f2e.jpg": "/images/admin/category/62e2ab0ed6f2e.jpg",
+    "/images/admin/marca/62e2aae397b65.jpg": "/images/admin/marca/62e2aae397b65.jpg",
     "/images/aeroplane.svg": "/images/aeroplane.svg",
     "/images/airplane.svg": "/images/airplane.svg",
     "/images/bgDownload.jpg": "/images/bgDownload.jpg",
@@ -22,24 +24,12 @@
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/products/729706062003970.jpg": "/images/products/729706062003970.jpg",
-    "/images/products/81wq00clus_-_1.jpg": "/images/products/81wq00clus_-_1.jpg",
-    "/images/products/asus_e210ma-tb_-_1.jpg": "/images/products/asus_e210ma-tb_-_1.jpg",
-    "/images/products/hp_victus_15-fa0031dx-_1_1.jpg": "/images/products/hp_victus_15-fa0031dx-_1_1.jpg",
-    "/images/wave2.svg": "/images/wave2.svg",
-    "/images/products/62e0b24e08e0c_729706062003970.jpg": "/images/products/62e0b24e08e0c_729706062003970.jpg",
-    "/images/products/62e0b72257c19_asus_e210ma-tb_-_1.jpg": "/images/products/62e0b72257c19_asus_e210ma-tb_-_1.jpg",
-    "/images/products/62e0b724e1ab8_no-fotos.png": "/images/products/62e0b724e1ab8_no-fotos.png",
-    "/images/products/62e0b7e106c5a_no-fotos.png": "/images/products/62e0b7e106c5a_no-fotos.png",
-    "/images/products/62e0b7e37fa41_81wq00clus_-_1.jpg": "/images/products/62e0b7e37fa41_81wq00clus_-_1.jpg",
-    "/images/products/62e0bd04af1b8_729706062003970.jpg": "/images/products/62e0bd04af1b8_729706062003970.jpg",
-    "/images/products/62e0bd06ad0c2_5-31.jpg": "/images/products/62e0bd06ad0c2_5-31.jpg",
-    "/images/products/62e0be4f448f9_asus_e210ma-tb_-_1.jpg": "/images/products/62e0be4f448f9_asus_e210ma-tb_-_1.jpg",
-    "/images/products/62e0be5271621_no-fotos.png": "/images/products/62e0be5271621_no-fotos.png",
-    "/images/admin/marca/62e0b3ee3cbed.jpeg": "/images/admin/marca/62e0b3ee3cbed.jpeg",
-    "/images/admin/marca/62e0bc432cac4_no-fotos.png": "/images/admin/marca/62e0bc432cac4_no-fotos.png",
-    "/images/admin/marca/62e0bc4530c24_asus_e210ma-tb_-_1.jpg": "/images/admin/marca/62e0bc4530c24_asus_e210ma-tb_-_1.jpg",
-    "/images/admin/marca/62e0bc707948a_26221288_108338189968664_4789405089082503702_o.jpg": "/images/admin/marca/62e0bc707948a_26221288_108338189968664_4789405089082503702_o.jpg",
-    "/images/admin/marca/62e0bc7e557d3_asus_e210ma-tb_-_1.jpg": "/images/admin/marca/62e0bc7e557d3_asus_e210ma-tb_-_1.jpg",
-    "/images/admin/marca/62e0bc80cd058_hp_victus_15-fa0031dx-_1_1.jpg": "/images/admin/marca/62e0bc80cd058_hp_victus_15-fa0031dx-_1_1.jpg"
+    "/images/products/62e2e0adad0ad_609006d50da0c517076247.jpg": "/images/products/62e2e0adad0ad_609006d50da0c517076247.jpg",
+    "/images/products/62e2e0afb73dc_609006d2d02ea838842816.jpg": "/images/products/62e2e0afb73dc_609006d2d02ea838842816.jpg",
+    "/images/products/62e2e0b19e4a5_6090041e0c0c0464727094.jpg": "/images/products/62e2e0b19e4a5_6090041e0c0c0464727094.jpg",
+    "/images/products/62e400a06a818_asus_e210ma-tb_-_1.jpg": "/images/products/62e400a06a818_asus_e210ma-tb_-_1.jpg",
+    "/images/products/62e400a8d9a72_81wq00clus_-_1.jpg": "/images/products/62e400a8d9a72_81wq00clus_-_1.jpg",
+    "/images/products/62e4018875693_hp_victus_15-fa0031dx-_1_1.jpg": "/images/products/62e4018875693_hp_victus_15-fa0031dx-_1_1.jpg",
+    "/images/products/62e4018d6cf2b_81wq00clus_-_1.jpg": "/images/products/62e4018d6cf2b_81wq00clus_-_1.jpg",
+    "/images/wave2.svg": "/images/wave2.svg"
 }
