--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -22,5 +22,6 @@
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/admin/marca/62e2fad76c700.jpeg": "/images/admin/marca/62e2fad76c700.jpeg"
 }
