--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,6 +20,9 @@
     "/images/ill2.svg": "/images/ill2.svg",
     "/images/img/logo.png": "/images/img/logo.png",
     "/images/logo.png": "/images/logo.png",
+    "/images/no-foto.png": "/images/no-foto.png",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/admin/marca/62e2fad76c700.jpeg": "/images/admin/marca/62e2fad76c700.jpeg",
+    "/images/admin/marca/62e0b3ee3cbed.jpeg": "/images/admin/marca/62e0b3ee3cbed.jpeg"
 }
