--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -31,5 +31,8 @@
     "/images/products/62e400a8d9a72_81wq00clus_-_1.jpg": "/images/products/62e400a8d9a72_81wq00clus_-_1.jpg",
     "/images/products/62e4018875693_hp_victus_15-fa0031dx-_1_1.jpg": "/images/products/62e4018875693_hp_victus_15-fa0031dx-_1_1.jpg",
     "/images/products/62e4018d6cf2b_81wq00clus_-_1.jpg": "/images/products/62e4018d6cf2b_81wq00clus_-_1.jpg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/marca/62e7d6fec0203.jpg": "/images/marca/62e7d6fec0203.jpg",
+    "/images/marca/62e7dd805c38b.jpg": "/images/marca/62e7dd805c38b.jpg",
+    "/images/marca/62e7de320e340.png": "/images/marca/62e7de320e340.png"
 }
