--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/images/admin/category/62e2ab0ed6f2e.jpg": "/images/admin/category/62e2ab0ed6f2e.jpg",
-    "/images/admin/marca/62e2aae397b65.jpg": "/images/admin/marca/62e2aae397b65.jpg",
     "/images/aeroplane.svg": "/images/aeroplane.svg",
     "/images/airplane.svg": "/images/airplane.svg",
     "/images/bgDownload.jpg": "/images/bgDownload.jpg",
@@ -24,12 +22,9 @@
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/products/62e2e0adad0ad_609006d50da0c517076247.jpg": "/images/products/62e2e0adad0ad_609006d50da0c517076247.jpg",
-    "/images/products/62e2e0afb73dc_609006d2d02ea838842816.jpg": "/images/products/62e2e0afb73dc_609006d2d02ea838842816.jpg",
-    "/images/products/62e2e0b19e4a5_6090041e0c0c0464727094.jpg": "/images/products/62e2e0b19e4a5_6090041e0c0c0464727094.jpg",
-    "/images/products/62e400a06a818_asus_e210ma-tb_-_1.jpg": "/images/products/62e400a06a818_asus_e210ma-tb_-_1.jpg",
-    "/images/products/62e400a8d9a72_81wq00clus_-_1.jpg": "/images/products/62e400a8d9a72_81wq00clus_-_1.jpg",
-    "/images/products/62e4018875693_hp_victus_15-fa0031dx-_1_1.jpg": "/images/products/62e4018875693_hp_victus_15-fa0031dx-_1_1.jpg",
-    "/images/products/62e4018d6cf2b_81wq00clus_-_1.jpg": "/images/products/62e4018d6cf2b_81wq00clus_-_1.jpg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/bgHero1.0.jpg": "/images/bgHero1.0.jpg",
+    "/images/itapua medical.PNG": "/images/itapua medical.PNG",
+    "/images/itapuamedical.png": "/images/itapuamedical.png",
+    "/images/abgHero.jpg": "/images/abgHero.jpg"
 }
