--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -25,5 +25,8 @@
     "/images/oxigeno.jpg": "/images/oxigeno.jpg",
     "/images/paperplane.svg": "/images/paperplane.svg",
     "/images/products/62e82b0bd59eb_pexels-rahul-716398.jpeg": "/images/products/62e82b0bd59eb_pexels-rahul-716398.jpeg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg": "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg",
+    "/images/products/62e83d8fd97fa_K.v.H Logo.jpg": "/images/products/62e83d8fd97fa_K.v.H Logo.jpg",
+    "/images/products/62e83d9493878_pexels-rahul-716398.jpeg": "/images/products/62e83d9493878_pexels-rahul-716398.jpeg"
 }
