--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,13 +1,13 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/images/admin/category/62e2ab0ed6f2e.jpg": "/images/admin/category/62e2ab0ed6f2e.jpg",
-    "/images/admin/marca/62e2aae397b65.jpg": "/images/admin/marca/62e2aae397b65.jpg",
+    "/images/abgHero.jpg": "/images/abgHero.jpg",
     "/images/aeroplane.svg": "/images/aeroplane.svg",
     "/images/airplane.svg": "/images/airplane.svg",
     "/images/bgDownload.jpg": "/images/bgDownload.jpg",
     "/images/bgDrawer.jpg": "/images/bgDrawer.jpg",
     "/images/bgHero.jpg": "/images/bgHero.jpg",
+    "/images/bgHero1.0.jpg": "/images/bgHero1.0.jpg",
     "/images/bghero1.jpg": "/images/bghero1.jpg",
     "/images/bgMain.png": "/images/bgMain.png",
     "/images/borderWaves.svg": "/images/borderWaves.svg",
@@ -21,20 +21,15 @@
     "/images/ill1.svg": "/images/ill1.svg",
     "/images/ill2.svg": "/images/ill2.svg",
     "/images/img/logo.png": "/images/img/logo.png",
+    "/images/itapua medical.PNG": "/images/itapua medical.PNG",
+    "/images/itapuamedical.png": "/images/itapuamedical.png",
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
+    "/images/oxigeno.jpg": "/images/oxigeno.jpg",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/products/62e2e0adad0ad_609006d50da0c517076247.jpg": "/images/products/62e2e0adad0ad_609006d50da0c517076247.jpg",
-    "/images/products/62e2e0afb73dc_609006d2d02ea838842816.jpg": "/images/products/62e2e0afb73dc_609006d2d02ea838842816.jpg",
-    "/images/products/62e2e0b19e4a5_6090041e0c0c0464727094.jpg": "/images/products/62e2e0b19e4a5_6090041e0c0c0464727094.jpg",
-    "/images/products/62e400a06a818_asus_e210ma-tb_-_1.jpg": "/images/products/62e400a06a818_asus_e210ma-tb_-_1.jpg",
-    "/images/products/62e400a8d9a72_81wq00clus_-_1.jpg": "/images/products/62e400a8d9a72_81wq00clus_-_1.jpg",
-    "/images/products/62e4018875693_hp_victus_15-fa0031dx-_1_1.jpg": "/images/products/62e4018875693_hp_victus_15-fa0031dx-_1_1.jpg",
-    "/images/products/62e4018d6cf2b_81wq00clus_-_1.jpg": "/images/products/62e4018d6cf2b_81wq00clus_-_1.jpg",
     "/images/wave2.svg": "/images/wave2.svg",
-    "/images/marca/62e7d6fec0203.jpg": "/images/marca/62e7d6fec0203.jpg",
-    "/images/marca/62e7dd805c38b.jpg": "/images/marca/62e7dd805c38b.jpg",
-    "/images/marca/62e7de320e340.png": "/images/marca/62e7de320e340.png",
-    "/images/marca/62e81736c5410.jpg": "/images/marca/62e81736c5410.jpg",
-    "/images/oxigeno.jpg": "/images/oxigeno.jpg"
+    "/images/local.jpeg": "/images/local.jpeg",
+    "/images/local.jpg": "/images/local.jpg",
+    "/images/alquilar.png": "/images/alquilar.png",
+    "/images/carritocompras.png": "/images/carritocompras.png"
 }
