--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -23,5 +23,10 @@
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/oxigeno.jpg": "/images/oxigeno.jpg",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/products/62e8957c43087_609006d50da0c517076247.jpg": "/images/products/62e8957c43087_609006d50da0c517076247.jpg",
+    "/images/products/62e8957c6ffce_609006d2d02ea838842816.jpg": "/images/products/62e8957c6ffce_609006d2d02ea838842816.jpg",
+    "/images/products/62e8957c9c516_6090041e0c0c0464727094.jpg": "/images/products/62e8957c9c516_6090041e0c0c0464727094.jpg",
+    "/images/alquilar.png": "/images/alquilar.png",
+    "/images/carritocompras.png": "/images/carritocompras.png"
 }
