cambiar title e idioma

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/css/app.css": "/css/app.css",
     "/images/aeroplane.svg": "/images/aeroplane.svg",
     "/images/airplane.svg": "/images/airplane.svg",
+    "/images/alquilar.png": "/images/alquilar.png",
     "/images/bgDownload.jpg": "/images/bgDownload.jpg",
     "/images/bgDrawer.jpg": "/images/bgDrawer.jpg",
     "/images/bgHero.jpg": "/images/bgHero.jpg",
@@ -10,6 +11,7 @@
     "/images/bgMain.png": "/images/bgMain.png",
     "/images/borderWaves.svg": "/images/borderWaves.svg",
     "/images/borderWavesBlue.svg": "/images/borderWavesBlue.svg",
+    "/images/carritocompras.png": "/images/carritocompras.png",
     "/images/icon1.png": "/images/icon1.png",
     "/images/icon1.svg": "/images/icon1.svg",
     "/images/icon2.png": "/images/icon2.png",
@@ -23,10 +25,8 @@
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/oxigeno.jpg": "/images/oxigeno.jpg",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/wave2.svg": "/images/wave2.svg",
     "/images/products/62e8957c43087_609006d50da0c517076247.jpg": "/images/products/62e8957c43087_609006d50da0c517076247.jpg",
     "/images/products/62e8957c6ffce_609006d2d02ea838842816.jpg": "/images/products/62e8957c6ffce_609006d2d02ea838842816.jpg",
     "/images/products/62e8957c9c516_6090041e0c0c0464727094.jpg": "/images/products/62e8957c9c516_6090041e0c0c0464727094.jpg",
-    "/images/alquilar.png": "/images/alquilar.png",
-    "/images/carritocompras.png": "/images/carritocompras.png"
+    "/images/wave2.svg": "/images/wave2.svg"
 }
