--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -21,6 +21,7 @@
     "/images/ill1.svg": "/images/ill1.svg",
     "/images/ill2.svg": "/images/ill2.svg",
     "/images/img/logo.png": "/images/img/logo.png",
+    "/images/local.jpeg": "/images/local.jpeg",
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/oxigeno.jpg": "/images/oxigeno.jpg",
