--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -28,5 +28,7 @@
     "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg": "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg",
     "/images/products/62e83d8fd97fa_K.v.H Logo.jpg": "/images/products/62e83d8fd97fa_K.v.H Logo.jpg",
     "/images/products/62e83d9493878_pexels-rahul-716398.jpeg": "/images/products/62e83d9493878_pexels-rahul-716398.jpeg",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/alquilar.png": "/images/alquilar.png",
+    "/images/carritocompras.png": "/images/carritocompras.png"
 }
