--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/images/admin/marca/62e2fad76c700.jpeg": "/images/admin/marca/62e2fad76c700.jpeg",
     "/images/aeroplane.svg": "/images/aeroplane.svg",
     "/images/airplane.svg": "/images/airplane.svg",
+    "/images/alquilar.png": "/images/alquilar.png",
     "/images/bgDownload.jpg": "/images/bgDownload.jpg",
     "/images/bgDrawer.jpg": "/images/bgDrawer.jpg",
     "/images/bgHero.jpg": "/images/bgHero.jpg",
@@ -11,6 +12,7 @@
     "/images/bghero1.jpg": "/images/bghero1.jpg",
     "/images/borderWaves.svg": "/images/borderWaves.svg",
     "/images/borderWavesBlue.svg": "/images/borderWavesBlue.svg",
+    "/images/carritocompras.png": "/images/carritocompras.png",
     "/images/icon1.png": "/images/icon1.png",
     "/images/icon1.svg": "/images/icon1.svg",
     "/images/icon2.png": "/images/icon2.png",
@@ -22,6 +24,11 @@
     "/images/img/logo.png": "/images/img/logo.png",
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
+    "/images/oxigeno.jpg": "/images/oxigeno.jpg",
     "/images/paperplane.svg": "/images/paperplane.svg",
+    "/images/products/62e82b0bd59eb_pexels-rahul-716398.jpeg": "/images/products/62e82b0bd59eb_pexels-rahul-716398.jpeg",
+    "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg": "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg",
+    "/images/products/62e83d8fd97fa_K.v.H Logo.jpg": "/images/products/62e83d8fd97fa_K.v.H Logo.jpg",
+    "/images/products/62e83d9493878_pexels-rahul-716398.jpeg": "/images/products/62e83d9493878_pexels-rahul-716398.jpeg",
     "/images/wave2.svg": "/images/wave2.svg"
 }
