--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
@@ -24,8 +23,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "autoprefixer": "10.4.5",
         "laravel-mix-alias": "^1.0.3",
+        "tailwindcss": "^3.1.7",
         "vue-media-upload": "^1.1.4",
         "vue-router": "^3.5.4",
         "vuetify": "^2.6.7",
