--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,16 +2,15 @@
     "/js/app.js": "/js/app.js",
     "/js/product.js": "/js/product.js",
     "/css/app.css": "/css/app.css",
-    "/images/abgHero.jpg": "/images/abgHero.jpg",
+    "/images/admin/marca/62e2fad76c700.jpeg": "/images/admin/marca/62e2fad76c700.jpeg",
     "/images/aeroplane.svg": "/images/aeroplane.svg",
     "/images/airplane.svg": "/images/airplane.svg",
     "/images/alquilar.png": "/images/alquilar.png",
     "/images/bgDownload.jpg": "/images/bgDownload.jpg",
     "/images/bgDrawer.jpg": "/images/bgDrawer.jpg",
     "/images/bgHero.jpg": "/images/bgHero.jpg",
-    "/images/bgHero1.0.jpg": "/images/bgHero1.0.jpg",
-    "/images/bghero1.jpg": "/images/bghero1.jpg",
     "/images/bgMain.png": "/images/bgMain.png",
+    "/images/bghero1.jpg": "/images/bghero1.jpg",
     "/images/borderWaves.svg": "/images/borderWaves.svg",
     "/images/borderWavesBlue.svg": "/images/borderWavesBlue.svg",
     "/images/carritocompras.png": "/images/carritocompras.png",
@@ -24,15 +23,14 @@
     "/images/ill1.svg": "/images/ill1.svg",
     "/images/ill2.svg": "/images/ill2.svg",
     "/images/img/logo.png": "/images/img/logo.png",
-    "/images/itapua medical.PNG": "/images/itapua medical.PNG",
-    "/images/itapuamedical.png": "/images/itapuamedical.png",
-    "/images/local.jpeg": "/images/local.jpeg",
-    "/images/local.jpg": "/images/local.jpg",
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/oxigeno.jpg": "/images/oxigeno.jpg",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/products/62e82b0bd59eb_pexels-rahul-716398.jpeg": "/images/products/62e82b0bd59eb_pexels-rahul-716398.jpeg",
+    "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg": "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg",
+    "/images/products/62e83d8fd97fa_K.v.H Logo.jpg": "/images/products/62e83d8fd97fa_K.v.H Logo.jpg",
+    "/images/products/62e83d9493878_pexels-rahul-716398.jpeg": "/images/products/62e83d9493878_pexels-rahul-716398.jpeg",
     "/images/ubicacion.png": "/images/ubicacion.png",
-    "/images/asd.jpeg": "/images/asd.jpeg"
+    "/images/wave2.svg": "/images/wave2.svg"
 }
