--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -30,5 +30,6 @@
     "/images/products/62e8957c43087_609006d50da0c517076247.jpg": "/images/products/62e8957c43087_609006d50da0c517076247.jpg",
     "/images/products/62e8957c6ffce_609006d2d02ea838842816.jpg": "/images/products/62e8957c6ffce_609006d2d02ea838842816.jpg",
     "/images/products/62e8957c9c516_6090041e0c0c0464727094.jpg": "/images/products/62e8957c9c516_6090041e0c0c0464727094.jpg",
+    "/images/ubicacion.png": "/images/ubicacion.png",
     "/images/wave2.svg": "/images/wave2.svg"
 }
