--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -31,5 +31,6 @@
     "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg": "/images/products/62e83d3781e3f_pexels-rahul-716398.jpeg",
     "/images/products/62e83d8fd97fa_K.v.H Logo.jpg": "/images/products/62e83d8fd97fa_K.v.H Logo.jpg",
     "/images/products/62e83d9493878_pexels-rahul-716398.jpeg": "/images/products/62e83d9493878_pexels-rahul-716398.jpeg",
+    "/images/ubicacion.png": "/images/ubicacion.png",
     "/images/wave2.svg": "/images/wave2.svg"
 }
