--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -22,14 +22,13 @@
     "/images/ill1.svg": "/images/ill1.svg",
     "/images/ill2.svg": "/images/ill2.svg",
     "/images/img/logo.png": "/images/img/logo.png",
-    "/images/local.jpeg": "/images/local.jpeg",
     "/images/logo.png": "/images/logo.png",
     "/images/no-foto.png": "/images/no-foto.png",
     "/images/oxigeno.jpg": "/images/oxigeno.jpg",
     "/images/paperplane.svg": "/images/paperplane.svg",
-    "/images/products/62e8957c43087_609006d50da0c517076247.jpg": "/images/products/62e8957c43087_609006d50da0c517076247.jpg",
-    "/images/products/62e8957c6ffce_609006d2d02ea838842816.jpg": "/images/products/62e8957c6ffce_609006d2d02ea838842816.jpg",
-    "/images/products/62e8957c9c516_6090041e0c0c0464727094.jpg": "/images/products/62e8957c9c516_6090041e0c0c0464727094.jpg",
     "/images/ubicacion.png": "/images/ubicacion.png",
-    "/images/wave2.svg": "/images/wave2.svg"
+    "/images/wave2.svg": "/images/wave2.svg",
+    "/images/fondo.jpg": "/images/fondo.jpg",
+    "/images/mapa.jpeg": "/images/mapa.jpeg",
+    "/images/map.jpeg": "/images/map.jpeg"
 }
